# koios-sdk

./: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
core/: cloudlink.c  ota.c
include/koios/: cloudlink.h  ota.h
include/koios/port/: kp_http.h  kp_identity.h  kp_log.h  kp_net.h  kp_os.h  kp_ota.h  kp_websocket.h
ports/esp-idf/: kp_http_esp.c  kp_identity_esp.c  kp_log_esp.c  kp_net_esp.c  kp_os_esp.c  kp_ota_esp.c  kp_websocket_esp.c
